# rag-poc

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
app/: __init__.py  chunker.py  embedder.py  main.py  rag.py  vector_store.py
samples/: sample.txt
tests/: conftest.py  test_api.py  test_chunker.py
