[project]
name = "rag-poc"
version = "0.1.0"
description = "Minimal single-document RAG POC with FastAPI, Chroma, and OpenAI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "python-multipart==0.0.12",
    "chromadb==0.5.15",
    "openai==1.54.0",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
native-tls = true
